--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,28 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/push_the_button"
+        android:id="@+id/btn_pushTheButton"
+        android:layout_marginTop="100dp"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/the_button_was_pressed"
+        android:id="@+id/tv_afterButtonPushed"
+        android:layout_below="@+id/btn_pushTheButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="134dp"
+        android:textSize="30dp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
